
classDiagram
    direction TB

%% ══════════════════════════════════════════
%% Lottery domain:
%% Updated Lottery design for current code
%% ══════════════════════════════════════════

    namespace Domain_Lottery {

        class Lottery
        class LotteryId
        class LotteryWinner
        class LotteryStatus

    }

%% ══════════════════════════════════════════
%% AGGREGATE Lottery:
%% Per-event lottery for purchase rights.
%% Status flow: REGISTRATION_OPEN -> CLOSED -> DRAWN
%% ══════════════════════════════════════════

    class Lottery:::aggregate {
        <<Aggregate Root>>
        - LotteryId lotteryId
        - EventId eventId
        - Set~MemberId~ registrations
        - Set~LotteryWinner~ winners
        - LotteryStatus status
        - Instant drawTimestamp
        + register(MemberId) boolean
        + close() void
        + draw(int, RandomGenerator, Instant, Duration codeValidity) void
        + validateCode(String, Instant) Optional~MemberId~
        + getLotteryId() LotteryId
        + getEventId() EventId
        + getStatus() LotteryStatus
        + getDrawTimestamp() Instant
        + getRegistrations() Set~MemberId~
        + getWinners() Set~LotteryWinner~
    }

%% ══════════════════════════════════════════
%% VALUE OBJECTS
%% ══════════════════════════════════════════

    class LotteryId:::idValueObject {
        <<ID - Value Object>>
    }

    class LotteryWinner:::valueObject {
        <<Value Object>>
        - MemberId memberId
        - String permissionCode
        - Instant codeExpiry
        + isExpired(Instant) boolean
    }

    class LotteryStatus:::enum {
        <<enumeration>>
        REGISTRATION_OPEN
        CLOSED
        DRAWN
    }

%% ══════════════════════════════════════════
%% CORE DOMAIN RELATIONS
%% ══════════════════════════════════════════

    Lottery "1" *-- "1" LotteryId
    Lottery "1" *-- "0..n" LotteryWinner
    Lottery --> LotteryStatus

%% ══════════════════════════════════════════
%% EXTERNAL DOMAIN REFERENCES
%% ══════════════════════════════════════════

    namespace Domain_Event {
        class EventId:::external
    }

    namespace Domain_Member {
        class MemberId:::external
    }

%% External relations:
    Lottery ..> EventId : lottery for event tickes
    Lottery ..> MemberId : registered members
    LotteryWinner ..> MemberId : winning member

%% ══════════════════════════════════════════
%% PERSISTENCE BOUNDARY / REPOSITORY ADAPTERS
%% Included to show how Lottery aggregates are stored and loaded.
%% ══════════════════════════════════════════


    namespace Infrastructure_Persistence {
        class LotteryRepository:::repository
    }

    class LotteryRepository {
        <<Repository>>
        - ConcurrentMap~LotteryId, Lottery~ byId
        - ConcurrentMap~EventId, LotteryId~ idByEvent
    }

    LotteryRepository ..> Lottery : manages persistence

%% ══════════════════════════════════════════
%% STYLING
%% ══════════════════════════════════════════

    classDef aggregate fill:#ffe8cc,stroke:#d9480f,stroke-width:2px,color:#000
    classDef valueObject fill:#e7f5ff,stroke:#1c7ed6,stroke-width:1px,color:#000
    classDef idValueObject fill:#fff0f6,stroke:#c2255c,stroke-width:1px,color:#000
    classDef enum fill:#f3f0ff,stroke:#6741d9,stroke-width:1px,color:#000
    classDef external fill:#f1f3f5,stroke:#495057,stroke-width:1px,color:#000
    classDef repositoryPort fill:#e3fafc,stroke:#1098ad,stroke-width:1px,color:#000
    classDef repository fill:#e6fcf5,stroke:#0ca678,stroke-width:1px,color:#000
    classDef legend fill:#ffffff,stroke:#212529,stroke-width:1px,color:#000

